[*] Use ModResultWrapper from utils.jl.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -156,22 +156,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ResultWrapper = NamedTuple{\n",
-    "    (:primal_status, :dual_status, :term_status, :obj_value, :bound, :a),\n",
-    "    Tuple{\n",
-    "        ResultStatusCode,\n",
-    "        ResultStatusCode,\n",
-    "        TerminationStatusCode,\n",
-    "        Float64,\n",
-    "        Float64,\n",
-    "        Dict{Tuple{Int64, Int64}, Float64},\n",
-    "    }\n",
-    "}\n",
-    "\n",
     "function plans_coupants(\n",
     "    graph::MetaGraph;\n",
     "    timelimit::Float64=3600.0\n",
-    ")::ResultWrapper\n",
+    ")::ModResultWrapper\n",
     "    start = time()\n",
     "    s::Int64 = graph[].s\n",
     "    t::Int64 = graph[].t\n",
