[*] Script de test debugue et teste.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -1,78 +1,73 @@
 {
-    "cells": [
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "## Sandbox\n",
-                "\n",
-                "Un  `.ipynb` pour tester des idées :)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "using Pkg\n",
-                "Pkg.activate(\".\")\n",
-                "Pkg.instantiate()\n",
-                "using Graphs\n",
-                "using MetaGraphsNext\n",
-                "using JuMP\n",
-                "using Gurobi\n",
-                "\n",
-                "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
-                "include(joinpath(\"src\", \"utils.jl\"));"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "infos = open(\n",
-                "    readInstance,\n",
-                "    file,\n",
-                ");"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "graph = graphFromData(infos);"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "res = dualSolve(graph; timelimit=time() + 60.0)\n",
-                "println(mkPath(res.a))\n",
-                "println(res.obj_value)"
-            ]
-        }
-    ],
-    "metadata": {
-        "kernelspec": {
-            "display_name": "Julia 1.7.2",
-            "language": "julia",
-            "name": "julia-1.7"
-        },
-        "language_info": {
-            "file_extension": ".jl",
-            "mimetype": "application/julia",
-            "name": "julia",
-            "version": "1.7.2"
-        }
-    },
-    "nbformat": 4,
-    "nbformat_minor": 2
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sandbox\n",
+    "\n",
+    "Un  `.ipynb` pour tester des idées :)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Pkg\n",
+    "Pkg.activate(\".\")\n",
+    "Pkg.instantiate()\n",
+    "using Graphs\n",
+    "using MetaGraphsNext\n",
+    "using JuMP\n",
+    "using Gurobi\n",
+    "\n",
+    "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
+    "include(joinpath(\"src\", \"utils.jl\"));\n",
+    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
+    "include(joinpath(\"src\", \"testing.jl\"));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dual = completeModelWrapper(dualSolve, time_budget=300.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_file = joinpath(\"data\", \"results\", \"test.json\")\n",
+    "instance_dir = joinpath(\"data\", \"small_instances\")\n",
+    "testMethod(\n",
+    "    method=dual;\n",
+    "    method_name=\"Dualisation\",\n",
+    "    save=save_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Julia 1.7.2",
+   "language": "julia",
+   "name": "julia-1.7"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.7.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
