[*] Annule les changements sur sandbox.ipynb

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,8 +25,7 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
-    "include(joinpath(\"src\", \"testing.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));"
    ]
   },
   {
@@ -35,7 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dual = completeModelWrapper(dualSolve, time_budget=300.0)"
+    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
+    "infos = open(\n",
+    "    readInstance,\n",
+    "    file,\n",
+    ");"
    ]
   },
   {
@@ -44,14 +48,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = joinpath(\"data\", \"results\", \"test.json\")\n",
-    "instance_dir = joinpath(\"data\", \"small_instances\")\n",
-    "testMethod(\n",
-    "    method=dual;\n",
-    "    method_name=\"Dualisation\",\n",
-    "    save=save_file,\n",
-    "    instance_dir=instance_dir,\n",
-    ")"
+    "graph = graphFromData(infos);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
+    "println(mkPath(res.a))\n",
+    "println(res.obj_value)"
    ]
   }
  ],
