[*] Refactorise le code -> dans latex.jl.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -26,7 +26,8 @@
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
     "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
-    "include(joinpath(\"src\", \"testing.jl\"));"
+    "include(joinpath(\"src\", \"testing.jl\"));\n",
+    "include(joinpath(\"src\", \"latex.jl\"))"
    ]
   },
   {
@@ -60,201 +61,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MethodResult = @NamedTuple begin\n",
-    "    is_feasible::Bool\n",
-    "    proven_optimality::Bool\n",
-    "    value::Float64\n",
-    "    lower_bound::Float64\n",
-    "    upper_bound::Float64\n",
-    "    solving_time::Float64\n",
-    "end\n",
-    "\n",
-    "function writePerfTable(\n",
-    "    methods::Vector{String};\n",
-    "    src_files::Vector{String},\n",
-    "    template_file::String,\n",
-    "    output::IOStream,\n",
-    "    not_robust_method::String,\n",
-    ")::Nothing\n",
-    "    InstanceResEntry = @NamedTuple begin\n",
-    "        instance::String\n",
-    "        res::Dict{String, MethodResult}\n",
-    "    end\n",
-    "    # Dict(instance => Dict(method => result))\n",
-    "    robust_data::Dict{String, Dict{String, MethodResult}} = Dict{String, Dict{String, MethodResult}}()\n",
-    "    not_robust_data::Dict{String, Dict{String, MethodResult}} = Dict{String, Dict{String, MethodResult}}()\n",
-    "    for src_file in src_files\n",
-    "        src_data = open(fd -> JSON.parse(fd), src_file, read=true)\n",
-    "        for entry_dict in src_data\n",
-    "            instance_entry::Dict{String, MethodResult} = get!(\n",
-    "                entry_dict[\"method\"] == not_robust_method ? not_robust_data : robust_data,\n",
-    "                entry_dict[\"file\"],\n",
-    "                Dict{String, MethodResult}(),\n",
-    "            )\n",
-    "            if haskey(instance_entry, entry_dict[\"method\"])\n",
-    "                @warn begin\n",
-    "                    \"Several resolutions found with the same method ($(entry_dict[\"method\"]))\" *\n",
-    "                    \" for the same instance ($(entry_dict[\"file\"])).\"\n",
-    "                end\n",
-    "            end\n",
-    "\n",
-    "            instance_entry[entry_dict[\"method\"]] = (\n",
-    "                is_feasible=Bool(entry_dict[\"is_feasible\"]),\n",
-    "                proven_optimality=Bool(entry_dict[\"proven_optimality\"]),\n",
-    "                value=entry_dict[\"value\"],\n",
-    "                lower_bound=entry_dict[\"lower_bound\"],\n",
-    "                upper_bound=entry_dict[\"upper_bound\"],\n",
-    "                solving_time=entry_dict[\"solving_time\"],\n",
-    "            )\n",
-    "\n",
-    "        end\n",
-    "    end\n",
-    "\n",
-    "    lower_bound::Dict{String, Float64} = Dict{String, Float64}()\n",
-    "    upper_bound::Dict{String, Float64} = Dict{String, Float64}()\n",
-    "    for (instance, instance_entry) in pairs(robust_data)\n",
-    "        lower_bound[instance] = maximum(\n",
-    "            method -> method.lower_bound,\n",
-    "            values(instance_entry),\n",
-    "            init=0,\n",
-    "        )\n",
-    "        upper_bound[instance] = minimum(\n",
-    "            method -> method.upper_bound,\n",
-    "            values(instance_entry),\n",
-    "            init=Inf,\n",
-    "        )\n",
-    "    end\n",
-    "    function nameSorter(s::String)::Tuple{Int64, String}\n",
-    "        n_str, suff = split(s, \"_\")\n",
-    "        return parse(Int64, n_str), suff\n",
-    "    end\n",
-    "    instance_list::Vector{InstanceResEntry} = collect(\n",
-    "        (instance=instance, res=entry) for (instance, entry) in pairs(robust_data)\n",
-    "    )\n",
-    "    sort!(instance_list; by=ins_res_entry -> nameSorter(ins_res_entry.instance))\n",
-    "    pref, suff = open(\n",
-    "        fd -> split(read(fd, String), \"%insert table%\"),\n",
-    "        template_file,\n",
-    "        read=true,\n",
-    "    )\n",
-    "    function writeTable(io::IOStream)::Nothing\n",
-    "        function gap(val::Float64, ref::Float64)::Float64\n",
-    "            if ref == 0\n",
-    "                if val == 0\n",
-    "                    return 0\n",
-    "                else\n",
-    "                    return Inf\n",
-    "                end\n",
-    "            else\n",
-    "                return (val - ref) / ref\n",
-    "            end\n",
-    "        end\n",
-    "        function percentify(val::Float64)::String\n",
-    "            if val == Inf\n",
-    "                return raw\"\\infty\"\n",
-    "            else\n",
-    "                return string(round(100 * val, digits=1)) * raw\" \\ \\% \"\n",
-    "            end\n",
-    "        end\n",
-    "        function minutify(seconds::Float64)::String\n",
-    "            mins, secs = divrem(seconds, 60)\n",
-    "            if mins == 0\n",
-    "                return \"$(round(Int64, secs, RoundUp))s\"\n",
-    "            else\n",
-    "                return \"$(Int64(mins))m$(round(Int64, secs, RoundUp))s\"\n",
-    "            end\n",
-    "        end\n",
-    "        function latexify(s::String)::String\n",
-    "            return replace(s, \"_\" => raw\"\\_\")\n",
-    "        end\n",
-    "        println(io, raw\"\\begin{tabular}{\", join(fill(\"c\", 2 + 2 * length(methods)), \" \"), \"}\")\n",
-    "        println(io, raw\"\\hline\")\n",
-    "        println(\n",
-    "            io,\n",
-    "            raw\"\\multirow{2}{*}{Instance} & \\multirow{2}{*}{PR} & \",\n",
-    "            join(collect(\"\\\\multicolumn{2}{c }{$method}\" for method in methods), \" & \"),\n",
-    "            \"\\\\\\\\\",\n",
-    "        )\n",
-    "        println(\n",
-    "            io,\n",
-    "            \"& & \",\n",
-    "            join(fill(\"Time & Gap\", length(methods)), \" & \"),\n",
-    "            \"\\\\\\\\\",\n",
-    "        )\n",
-    "        println(io, raw\"\\hline\")\n",
-    "        eps = 0.001\n",
-    "        for (instance, entry) in instance_list\n",
-    "            print(io, latexify(splitext(instance)[1]), \" & \")\n",
-    "    \n",
-    "            lower_exact_value::Float64 = Inf\n",
-    "            if haskey(not_robust_data, instance)\n",
-    "                meth_entry = not_robust_data[instance] |> values |> only\n",
-    "                lower_exact_value = meth_entry.lower_bound\n",
-    "                if lower_bound[instance] < lower_exact_value\n",
-    "                    lower_bound[instance] = lower_exact_value\n",
-    "                end\n",
-    "            end\n",
-    "            upper_exact_value::Float64 = minimum(\n",
-    "                meth -> meth.upper_bound,\n",
-    "                (\n",
-    "                    get(robust_data, instance, Dict{String, MethodResult}()) |> values,\n",
-    "                    get(not_robust_data, instance, Dict{String, MethodResult}()) |> values,\n",
-    "                ) |> Iterators.flatten;\n",
-    "                init=Inf,\n",
-    "            )\n",
-    "\n",
-    "            if !haskey(not_robust_data, instance)\n",
-    "                print(io, \"? \")\n",
-    "            elseif upper_bound[instance] * upper_exact_value <= lower_exact_value * lower_bound[instance] + eps\n",
-    "                print(\n",
-    "                    io,\n",
-    "                    raw\"$\",\n",
-    "                    gap(upper_bound[instance], lower_exact_value) |> percentify,\n",
-    "                    raw\"$ \",\n",
-    "                )\n",
-    "            else\n",
-    "                print(\n",
-    "                    io,\n",
-    "                    raw\"$\",\n",
-    "                    gap(lower_bound[instance], upper_exact_value) |> percentify,\n",
-    "                    raw\" \\leq \\quad \\leq \",\n",
-    "                    gap(upper_bound[instance], lower_exact_value) |> percentify,\n",
-    "                    raw\"$ \",\n",
-    "                )\n",
-    "            end\n",
-    "            for method in methods\n",
-    "                print(io, \"& \")\n",
-    "                if haskey(entry, method)\n",
-    "                    meth_entry = entry[method]\n",
-    "                    print(io, minutify(meth_entry.solving_time), \" & \")\n",
-    "                    if meth_entry.is_feasible\n",
-    "                        print(io, raw\"$\", gap(meth_entry.value, lower_bound[instance]) |> percentify, raw\"$ \")\n",
-    "                    else\n",
-    "                        print(io, \"- \")\n",
-    "                    end\n",
-    "                else\n",
-    "                    print(io, \" & \")\n",
-    "                end\n",
-    "            end\n",
-    "            println(io, \"\\\\\\\\\")\n",
-    "        end\n",
-    "        println(io, raw\"\\hline\")\n",
-    "        println(io, raw\"\\end{tabular}\")\n",
-    "        return nothing\n",
-    "    end\n",
-    "    print(output, pref)\n",
-    "    writeTable(output)\n",
-    "    print(output, suff)\n",
-    "    return nothing\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "methods = [\"Dualisation\"]\n",
     "src_files = [joinpath(\"data\", \"results\", \"test.json\")]\n",
     "template_file = joinpath(\"template\", \"table.tex\")\n",
@@ -268,13 +74,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "results = processResultsForTable(\n",
+    "    src_files;\n",
+    "    not_robust_method=not_robust,\n",
+    ")\n",
+    "\n",
     "open(\n",
-    "    fd -> writePerfTable(\n",
+    "    fd -> writeTable(\n",
     "        methods;\n",
-    "        src_files=src_files,\n",
+    "        results=results,\n",
     "        template_file=template_file,\n",
     "        output=fd,\n",
-    "        not_robust_method=not_robust,\n",
     "    ),\n",
     "    output_file,\n",
     "    write=true,\n",
