--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,9 +25,7 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
-    "include(joinpath(\"src\", \"testing.jl\"));\n",
-    "include(joinpath(\"src\", \"latex.jl\"))"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));"
    ]
   },
   {
@@ -36,7 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dual = completeModelWrapper(dualSolve, time_budget=300.0);"
+    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
+    "infos = open(\n",
+    "    readInstance,\n",
+    "    file,\n",
+    ");"
    ]
   },
   {
@@ -45,14 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = joinpath(\"data\", \"results\", \"test.json\")\n",
-    "instance_dir = joinpath(\"data\", \"small_instances\")\n",
-    "testMethod(\n",
-    "    method=dual;\n",
-    "    method_name=\"Dualisation\",\n",
-    "    save=save_file,\n",
-    "    instance_dir=instance_dir,\n",
-    ")"
+    "graph = graphFromData(infos);"
    ]
   },
   {
@@ -61,34 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "methods = [\"Dualisation\"]\n",
-    "src_files = [joinpath(\"data\", \"results\", \"test.json\")]\n",
-    "template_file = joinpath(\"template\", \"table.tex\")\n",
-    "output_file = joinpath(\"out\", \"table.tex\")\n",
-    "not_robust = \"None\";"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = processResultsForTable(\n",
-    "    src_files;\n",
-    "    not_robust_method=not_robust,\n",
-    ")\n",
-    "\n",
-    "open(\n",
-    "    fd -> writeTable(\n",
-    "        methods;\n",
-    "        results=results,\n",
-    "        template_file=template_file,\n",
-    "        output=fd,\n",
-    "    ),\n",
-    "    output_file,\n",
-    "    write=true,\n",
-    ")"
+    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
+    "println(mkPath(res.a))\n",
+    "println(res.obj_value)"
    ]
   }
  ],
