--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"heuristics.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
-    "file = joinpath(\"data\", \"instances\", \"20_USA-road-d.COL.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
     "infos = open(\n",
     "    readInstance,\n",
     "    file,\n",
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = heuristicSolve(graph);"
+    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
+    "println(mkPath(res.a))\n",
+    "println(res.obj_value)"
    ]
   }
  ],
