[+] Wrapper pour heuristique + amelioration du typage.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"heuristics.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
+    "include(joinpath(\"src\", \"heuristics.jl\"))\n",
+    "include(joinpath(\"src\", \"testing.jl\"));"
    ]
   },
   {
@@ -34,12 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
-    "file = joinpath(\"data\", \"instances\", \"20_USA-road-d.COL.gr\")\n",
-    "infos = open(\n",
-    "    readInstance,\n",
-    "    file,\n",
-    ");"
+    "dual = completeModelWrapper(dualSolve, time_budget=300.0)"
    ]
   },
   {
@@ -48,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = graphFromData(infos);"
+    "time_budget = nSquaredTimeWithMax(maxtime=600.0, mintime=10.0)\n",
+    "heuristic = heurWrapper(time_budget_fun=time_budget);"
    ]
   },
   {
@@ -57,7 +55,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = heuristicSolve(graph);"
+    "save_file = joinpath(\"data\", \"results\", \"test3.json\")\n",
+    "instance_dir = joinpath(\"data\", \"small_instances\")\n",
+    "testMethod(\n",
+    "    method=heuristic;\n",
+    "    method_name=\"Heuristique\",\n",
+    "    save=save_file,\n",
+    "    instance_dir=instance_dir,\n",
+    ")"
    ]
   }
  ],
