[-] Annule les changement sur sandbox.ipynb.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -25,9 +25,7 @@
     "\n",
     "ENV[\"GRB_LICENSE_FILE\"] = \"gurobi.lic\"\n",
     "include(joinpath(\"src\", \"utils.jl\"));\n",
-    "include(joinpath(\"src\", \"dual_solve.jl\"));\n",
-    "include(joinpath(\"src\", \"heuristics.jl\"))\n",
-    "include(joinpath(\"src\", \"testing.jl\"));"
+    "include(joinpath(\"src\", \"dual_solve.jl\"));"
    ]
   },
   {
@@ -36,7 +34,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dual = completeModelWrapper(dualSolve, time_budget=300.0)"
+    "# file = joinpath(\"data\", \"20_USA-road-d.BAY.gr\")\n",
+    "file = joinpath(\"data\", \"100_USA-road-d.BAY.gr\")\n",
+    "infos = open(\n",
+    "    readInstance,\n",
+    "    file,\n",
+    ");"
    ]
   },
   {
@@ -45,8 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_budget = nSquaredTimeWithMax(maxtime=600.0, mintime=10.0)\n",
-    "heuristic = heurWrapper(time_budget_fun=time_budget);"
+    "graph = graphFromData(infos);"
    ]
   },
   {
@@ -55,14 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_file = joinpath(\"data\", \"results\", \"test3.json\")\n",
-    "instance_dir = joinpath(\"data\", \"small_instances\")\n",
-    "testMethod(\n",
-    "    method=heuristic;\n",
-    "    method_name=\"Heuristique\",\n",
-    "    save=save_file,\n",
-    "    instance_dir=instance_dir,\n",
-    ")"
+    "res = dualSolve(graph; timelimit=time() + 60.0)\n",
+    "println(mkPath(res.a))\n",
+    "println(res.obj_value)"
    ]
   }
  ],
