--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "infos = open(\n",
     "    readInstance,\n",
-    "    joinpath(\"data\", \"100_USA-road-d.BAY.gr\"),\n",
+    "    joinpath(\"data\", \"instances\", \"100_USA-road-d.BAY.gr\"),\n",
     ");\n",
     "graph = graphFromData(infos);"
    ]
@@ -236,12 +236,18 @@
     "    m_value = JuMP.objective_value(modele_maitre)\n",
     "    # end\n",
     "    println(\"elapsed time : \", time() - start)\n",
+    "    prim_stat = primal_status(modele_maitre)\n",
+    "    ub::Float64 = Inf\n",
+    "    if prim_stat == FEASIBLE_POINT\n",
+    "        ub = objective_value(modele_maitre)\n",
+    "    end\n",
     "    return (\n",
     "        primal_status=primal_status(modele_maitre),\n",
     "        dual_status=dual_status(modele_maitre),\n",
     "        term_status=termination_status(modele_maitre),\n",
     "        obj_value=objective_value(modele_maitre),\n",
-    "        bound=objective_bound(modele_maitre),\n",
+    "        lower_bound=objective_bound(modele_maitre),\n",
+    "        upper_bound=ub,\n",
     "        a=Dict{Tuple{Int64, Int64}, Float64}((i, j) => value(a[(i, j)]) for (i, j) in edge_labels(graph)),\n",
     "    )\n",
     "end\n"
