Heuristique SP1 & SP2

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "infos = open(\n",
     "    readInstance,\n",
-    "    joinpath(\"data\", \"instances\", \"100_USA-road-d.BAY.gr\"),\n",
+    "    joinpath(\"data\", \"instances\", \"20_USA-road-d.BAY.gr\"),\n",
     ");\n",
     "graph = graphFromData(infos);"
    ]
@@ -185,6 +185,66 @@
     "    return SP2_value, delta_p_sol\n",
     "end\n",
     "\n",
+    "function heuristic_SP1(a_val)\n",
+    "    SP1_value = 0\n",
+    "    worst_weight::Dict{Tuple{Int64,Int64}, Float64} = Dict{Tuple{Int64,Int64},Float64}()\n",
+    "    delta_d_heur::Dict{Tuple{Int64,Int64},Float64} = Dict{Tuple{Int64,Int64},Float64}()\n",
+    "    for (i, j) in edge_labels(graph)\n",
+    "        if (a_val[(i, j)] > 0)\n",
+    "            worst_weight[(i,j)] = graph[i, j].d * graph[i, j].big_d\n",
+    "            SP1_value += graph[i, j].d\n",
+    "        end\n",
+    "        delta_d_heur[(i , j)] = 0\n",
+    "    end\n",
+    "    tuple_vec = sort(collect(worst_weight), by=x -> x.second, rev=true)\n",
+    "    \n",
+    "    d1::Float64 = graph[].d1\n",
+    "    rem::Float64 = 0\n",
+    "    for vec in tuple_vec\n",
+    "        i, j = vec.first\n",
+    "        rem = min(d1, graph[i, j].big_d)\n",
+    "        delta_d_heur[(i, j)] = rem\n",
+    "        SP1_value += graph[i, j].d * rem\n",
+    "        d1 -= rem\n",
+    "        if (d1 == 0)\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    return SP1_value, delta_d_heur\n",
+    "end\n",
+    "\n",
+    "function heuristic_SP2(a_val)\n",
+    "    SP2_value = 0\n",
+    "    worst_weight::Dict{Int64, Float64} = Dict{Int64,Float64}()\n",
+    "    delta_p_heur::Dict{Int64,Float64} = Dict{Int64,Float64}()\n",
+    "    for (i, j) in edge_labels(graph)\n",
+    "        if (a_val[(i, j)] > 0)\n",
+    "            worst_weight[i] = 2 * graph[i].ph\n",
+    "            SP2_value += graph[i].p\n",
+    "        end\n",
+    "        delta_p_heur[i] = 0\n",
+    "    end\n",
+    "    t::Float64 = graph[].t\n",
+    "    worst_weight[t] = 2 * graph[t].ph\n",
+    "    SP2_value += graph[t].p\n",
+    "    delta_p_heur[t] = 0\n",
+    "    tuple_vec = sort(collect(worst_weight), by=x -> x.second, rev=true)\n",
+    "    \n",
+    "    d2::Float64 = graph[].d2\n",
+    "    rem::Float64 = 0\n",
+    "    for vec in tuple_vec\n",
+    "        i = vec.first\n",
+    "        rem = min(d2, 2)\n",
+    "        delta_p_heur[i] = rem\n",
+    "        SP2_value += graph[i].ph * rem\n",
+    "        d2 -= rem\n",
+    "        if (d2 == 0)\n",
+    "            break\n",
+    "        end\n",
+    "    end\n",
+    "    return SP2_value, delta_p_heur\n",
+    "end\n",
+    "\n",
     "function my_lazy_callback(cb_data)\n",
     "    # On récupère la valeur de a\n",
     "    a_val = Dict((i,j) => callback_value(cb_data, a[(i,j)]) for (i,j) in edge_labels(graph))\n",
@@ -193,6 +253,7 @@
     "\n",
     "    # Résolution SP1\n",
     "    SP1_value, delta_d_sol = resolution_SP1(a_val, z_val)\n",
+    "    # SP1_value, delta_d_sol = heuristic_SP1(a_val)\n",
     "    if (round(SP1_value - z_val; digits=4) > 0)\n",
     "        cstr = @build_constraint(\n",
     "            sum(graph[i, j].d * (1 + delta_d_sol[(i,j)]) * a[(i, j)] for (i, j) in edge_labels(graph)) <= z)\n",
@@ -204,6 +265,7 @@
     "    # Résolution SP2\n",
     "    t = graph[].t\n",
     "    SP2_value, delta_p_sol = resolution_SP2(a_val, z_val)\n",
+    "    # SP2_value, delta_p_sol = heuristic_SP2(a_val)\n",
     "    if (SP2_value > graph[].big_s)\n",
     "        cstr = @build_constraint(\n",
     "            sum((graph[i].p + delta_p_sol[i] * graph[i].ph) * a[(i, j)] for (i, j) in edge_labels(graph)) +\n",
