[*] Adapte cutting_planes au nouveau ModResult.

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = plans_coupants(graph; timelimit=1200.0)\n",
+    "res = plans_coupants(graph; timelimit=time() + 1200.0)\n",
     "println(mkPath(res.a))\n",
     "println(res.obj_value)"
    ]
